# pygeminador

./: .env_example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: my_app.py
src/components/: my_button.py  my_code_text_box.py  my_directory_tree.py  my_image.py  my_message_dialog.py
src/imgs/: file_ref.txt  folder_ref.txt  logo_ref.txt  python_ref.txt
src/services/gemini/: chat_gemini.py  conf_gemini.py  gemini_add_comments.py  gemini_improve_code.py  send_chat_gemini.py
src/utils/: my_paths.py
src/views/: init_view.py  project_view.py
